namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bend-racing-web
  labels:
    kubernetes.io/metadata.name: bend-racing-web
