backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bend-racing-api
  namespace: bend-racing-web
  labels:
    app: bend-racing-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bend-racing-api
  template:
    metadata:
      labels:
        app: bend-racing-api
    spec:
      containers:
        - name: api
          image: docker.io/noaprosper/bend-racing-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: vehicules-data
              mountPath: /data
      volumes:
        - name: vehicules-data
          persistentVolumeClaim:
            claimName: bend-racing-vehicules-pvc
