backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bend-racing-api
  namespace: bend-racing-web
  labels:
    app: bend-racing-api
spec:
  type: ClusterIP
  selector:
    app: bend-racing-api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
