ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bend-racing-web
  namespace: bend-racing-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bend-racing.fr
        - www.bend-racing.fr
      secretName: bend-racing-tls
  rules:
    - host: bend-racing.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bend-racing-api
                port:
                  number: 3000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: bend-racing-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bend-racing-web
                port:
                  number: 80
    - host: www.bend-racing.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bend-racing-api
                port:
                  number: 3000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: bend-racing-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bend-racing-web
                port:
                  number: 80
